Bug 432121: [javadoc] IAE when hovering over types